# iplotlib

./: .gitattributes  .gitignore  MANIFEST.in  QtCanvasOverlay.py  QtCanvasTool.py  QtOverlayCanvasTool.py  QtOverlayPlotCanvas.py  QtPlotCanvas.py  QtPlotCanvasToolbar.py  README.md  autocopy  copyright.md.jinja2  environ.sh  pyproject.toml  requirements.txt  set-version.sh  setup.cfg  setup.py
access/: dataAccess.py  dataCommon.py  dataSourceConfig.py  imasAccess.py  realTimeStreamer.py  udaAccess.py
canvas/: AbstractPlotCanvas.py  AbstractPlotObj.py
canvastools/: QtCrosshairTool.py  QtPanTool.py  QtZoomTool.py
ci-build/: st00-header.sh  st01-install.sh  st02-test.sh  st03-codecov.sh
core/: Axis.py  Canvas.py  Events.py  Plot.py  Signal.py
core/tests/: test_signal.py
data/: AbstractDataAccess.py
data_access/: streamer.py
development/: 01-create-env.sh  02-post-env-activate.sh  03-install-packages.sh  04-uninstall-packages.sh  setup-iplotlib-docs.sh  setup-sdcc-dev.sh
docs/: Makefile  requirements-docs.txt
docs/source/: api.rst  conf.py  index.rst  install.rst  testing.rst  usage.rst
examples/: Test1.py  multiwidget.py
examples/tests/: nanosecondformatter.py
gnuplot/: QtGnuplotCanvas.py  QtGnuplotCanvas2.py  QtGnuplotMultiwidgetCanvas.py  QtGnuplotWidget2.py
gnuplotwidget/gnuplotwidget/: GnuplotWidget.pro
iplotlib/: __init__.py  _version.py
iplotlib/core/: __init__.py  (+14 more)
matplotlib/: QtMatplotlibCanvas.py  QtMatplotlibCanvas2.py
mint/: main.py
qt/: QtOverlayCanvasTool.py  qtPlotCanvas.py  qtPlotCanvasToolbar.py  qtStandalonePlotCanvas.py
(+166 files in other folders)
